tests/miniJava/neg/005537_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { void public int [] java ( ) { return 0 ; } }
